Changed author name

--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,4 +1,4 @@
 configuration.text=Config environment DEV
-configuration.author.name=Josep
-configuration.author.email=Pla
+configuration.author.name=Josep Pla
+configuration.author.email=joseppla@osudio.com
 
