--- a/servicio-items-prod.properties
+++ b/servicio-items-prod.properties
@@ -1,3 +1,5 @@
 server.port=8007
 configuration.text=Config environment PROD
+configuration.author.name=John
+configuration.author.email=john@osudio.com
 
